--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+		<script src="//at.alicdn.com/t/c/font_4564869_2c9sbq4301s.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
